--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>صفحه اصلی</title>
+    <link rel="stylesheet" href="./assets/dist/style.css">
 </head>
 <body>
-    b
+    
+    <script src="./assets/js/jquery.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html> 
