--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<!doctype html>
+<html>
+  <head>
+    <title>Title</title>
+
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>صفحه اصلی</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- link -->
     <link rel="stylesheet" href="./assets/dist/style.css">
-</head>
-<body>
-    
+    <!-- w3css -->
+    <link rel="stylesheet" href="./assets/css/w3.css">
+    <!-- Bootstrap CSS v5.0.2 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+
+  </head>
+  <body>
+  
+    <!-- <body> -->
+
+        
+
+    <!-- </body>-->
+
+    <!-- script -->
     <script src="./assets/js/jquery.min.js"></script>
     <script src="./assets/js/script.js"></script>
-</body>
-</html> 
+    <!-- w3js -->
+    <script src="https://www.w3schools.com/lib/w3.js"></script>
+    <!-- Bootstrap JavaScript Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+  </body>
+</html>
